WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189798
Release assert under RenderView::pageOrViewLogicalHeight
https://bugs.webkit.org/show_bug.cgi?id=189798
Summary
Release assert under RenderView::pageOrViewLogicalHeight
alan
Reported
2018-09-20 12:36:14 PDT
document().printing() vs shouldUsePrintingLayout() subframes don't use printing layout.
Attachments
Patch
(3.49 KB, patch)
2018-09-20 14:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-09-20 12:36:37 PDT
<
rdar://problem/43659749
>
alan
Comment 2
2018-09-20 14:26:40 PDT
Created
attachment 350265
[details]
Patch
WebKit Commit Bot
Comment 3
2018-09-20 15:27:39 PDT
Comment on
attachment 350265
[details]
Patch Clearing flags on attachment: 350265 Committed
r236288
: <
https://trac.webkit.org/changeset/236288
>
WebKit Commit Bot
Comment 4
2018-09-20 15:27:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug